--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
+    <script>
+        var API_URL = "{{ api_url }}";
+    </script>
+    
 </head>
 <body>
     <div class="container">
