--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Review Quality Predictor</h1>
+        <h1>Airlines Service Review Quality Predictor</h1>
+        <h2>Group One - MCSD2123 </h2>
+        <h3>Group Assignment 1-2024 </h3>
+      
         <p>Enter your reviews below, separated by a newline (press Enter for a new review).</p>
         <textarea id="reviewInput" placeholder="Enter reviews here...">
 The flight was comfortable and the staff were very friendly.
