--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,6 +28,16 @@ h1 {
     text-align: center;
     margin-bottom: 20px;
 }
+h2 {
+    color: #2c3e50;
+    text-align: center;
+    margin-bottom: 20px;
+}
+h3 {
+    color: #2c3e50;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
 textarea {
     width: calc(100% - 20px); /* Adjust width to account for padding */
