--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
+
 body {
     font-family: 'Nunito', sans-serif;
     background-color: #eef1f7;
@@ -23,20 +25,11 @@ body {
     align-items: stretch;
 }
 
-h1 {
+.animated-title {
     color: #2c3e50;
     text-align: center;
-    margin-bottom: 20px;
-}
-h2 {
-    color: #2c3e50;
-    text-align: center;
-    margin-bottom: 20px;
-}
-h3 {
-    color: #2c3e50;
-    text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
+    animation-duration: 1s;
 }
 
 textarea {
@@ -91,6 +84,32 @@ button:hover {
     padding-bottom: 5px;
 }
 
+.model-details {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #f8f9fa;
+    border-left: 5px solid #5cb85c;
+}
+
+.model-details p {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.model-details ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.model-details ul li {
+    font-size: 14px;
+    margin: 5px 0;
+    padding: 0;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -101,6 +120,7 @@ button:hover {
         transform: translateY(0);
     }
 }
+
 .spinner {
     border: 4px solid rgba(0, 0, 0, 0.1);
     border-top: 4px solid #5cb85c;
